# fftnoicereduction

./: .gitignore  AudioFileLoader.cpp  AudioFileLoader.h  AudioFileSourcer.cpp  AudioFileSourcer.h  CMakeLists.txt  FFTComplexBuffer.cpp  FFTComplexBuffer.h  FFTPlan.cpp  FFTPlan.h  FFTRealBuffer.cpp  FFTRealBuffer.h  Main.qml  MyAVCodec.cpp  MyAVCodec.h  MyAVFormatContext.cpp  MyAVFormatContext.h  MyAVFrame.cpp  MyAVFrame.h  MyAVPacket.cpp  MyAVPacket.h  MyAVSamplesBuffer.cpp  MyAVSamplesBuffer.h  MySwrContext.cpp  MySwrContext.h  README.md  SpectrogramView.cpp  SpectrogramView.h  WaveShapeView.cpp  WaveShapeView.h  main.cpp  qtquickcontrols2.conf
win32/: README.md
win32/fftw/: fftw3-3.exp  fftw3-3.lib  fftw3f-3.exp  fftw3f-3.lib  fftw3l-3.exp  fftw3l-3.lib
